@@ -12,6 +12,14 @@
 #define UNIT_NODO                         15                                    // Na een reset wordt dit het unitnummer van de Nodo
 #define HOME_NODO                          1                                    // Home adres. Alleen Nodo's met hetzelde Home adres kunnen ondeling gegevens uitwisselen
 
+#define CFG_CLOCK                      false                                    // false=geen code voor Real Time Clock mee compileren. (Op Mega is meecompileren van Clock verplicht)
+#define CFG_SOUND                      false                                    // false=geen luidspreker in gebruik.
+#define CFG_WIRED                      false                                    // false=wired voorzieningen uitgeschakeld
+#define CFG_I2C                        false                                    // false=I2C communicatie niet mee compileren (I2C plugins en klok blijvel wel gebruik maken van I2C)
+#define CFG_SLEEP                      false                                    // false=Sleep mode mee compileren.
+#define CFG_SERIAL                     false                                    // false=Seriele communicatie niet mee compileren. LET OP: hierdoor geen enkele weergave of input via seriele poort meer mogelijk!!! Alleen voor de Nodo-Small 
+#define CFG_RAWSIGNAL                  false                                    // false=Rawsignal niet meecompileren. LET OP: Zowel RF als IR communicatie alsmede diverse plugins gebruiken RawSignal voorzieningen. Alleen voor de Nodo-Small
+
 
 // Kaku: Klik-Aan-Klik-Uit
 // #define PLUGIN_001
